# cake

./: .gitignore  CMakeLists.txt  conanfile.py
lazy/: emscripten.cmd  vs2019_win_x64.cmd
src/: main.cpp
src/utils/: bgfx_utils.cpp  bgfx_utils.h
workspace/: build.bat  conanws_vs.yml  layout_vs
